force-app/main/default/objects/Account/fields/Invoice_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Type__c</fullName>
    <inlineHelpText>The default invoice delivery method is Postal Mail.  In order to change method customer must meet approval criteria.</inlineHelpText>
    <label>Invoice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Postal Mail</fullName>
                <default>true</default>
                <label>Postal Mail</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Portal Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>