force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <inlineHelpText>This is the number of days after the invoice date that a customer has to remit timely payment</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 75</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>