force-app/main/default/objects/Account/fields/PHSS_Channel__c.field-meta.xml
<CustomField>
    <fullName>PHSS_Channel__c</fullName>
    <inlineHelpText>Used to identify the PHSS Sales Channel type.  Choose all that apply.</inlineHelpText>
    <label>PHSS Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>Authorized Provider</fullName>
            </value>
            <value>
                <fullName>Business Client</fullName>
            </value>
            <value>
                <fullName>CEP Agency</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Licensed Training Provider</fullName>
            </value>
            <value>
                <fullName>NAT Agency</fullName>
            </value>
            <value>
                <fullName>NAT AP/LTP</fullName>
            </value>
            <value>
                <fullName>National Account Network</fullName>
            </value>
            <value>
                <fullName>RCS Distributor</fullName>
            </value>
            <value>
                <fullName>RCS Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>