force-app/main/default/objects/Account/fields/SFMC_invalid__c.field-meta.xml
<CustomField>
    <fullName>SFMC_invalid__c</fullName>
    <formula>IF(CONTAINS(Name, &quot;bucket&quot;), true, 
IF(CONTAINS(Name, &quot;Bucket&quot;), true, false ))</formula>
    <label>SFMC invalid</label>
    <type>Checkbox</type>
</CustomField>