force-app/main/default/objects/Account/recordTypes/Facility_Billing_Accounts_in_Account_Hierarchy.recordType-meta.xml
<RecordType>
    <fullName>Facility_Billing_Accounts_in_Account_Hierarchy</fullName>
    <active>true</active>
    <description>Facility + Billing Accounts in Account Hierarchy</description>
    <label>Facility Account</label>
</RecordType>