force-app/main/default/objects/Account/recordTypes/Organization_Account.recordType-meta.xml
<RecordType>
    <fullName>Organization_Account</fullName>
    <active>true</active>
    <description>The record type most associated with accounts focused on Businesses and organizations dealing with PHSS</description>
    <label>Organization Account</label>
</RecordType>