force-app/main/default/objects/Account/recordTypes/SB_Household_Account.recordType-meta.xml
<RecordType>
    <fullName>SB_Household_Account</fullName>
    <active>false</active>
    <description>The record type associated to the holding household records for individuals who will be dealing with the Training Support Center at PHSS.</description>
    <label>SB Household Account</label>
</RecordType>