force-app/main/default/objects/Account/validationRules/Invoice_delivery_Email_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_delivery_Email_Restriction</fullName>
    <active>false</active>
    <description>Prevent entering Invoice delivery Email when Account PHSS Channel is not RCS Retail Or RCS Distributor And Email(Red Cross Email) is not Empty.</description>
    <errorConditionFormula>AND( 
!ISBLANK(Invoice_delivery_Email__c), 
NOT(AND( 
OR( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)), 
!ISBLANK(Log_In_Email__c) 
) 
),
!$Setup.Validation_Rules__c.Bypass_Rules__c = TRUE 
)</errorConditionFormula>
    <errorDisplayField>Invoice_delivery_Email__c</errorDisplayField>
    <errorMessage>You cannot add Invoice delivery Email for this Account.</errorMessage>
</ValidationRule>